--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "drupal/bootstrap": "^3.28",
         "drupal/core-composer-scaffold": "10.1.0",
         "drupal/core-project-message": "10.1.0",
-        "drupal/core-recommended": "10.1.0"
+        "drupal/core-recommended": "10.1.0",
+        "drupal/mix": "^1.5"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -93,5 +94,8 @@
                 "      composer remove drupal/core-project-message"
             ]
         }
+    },
+    "require-dev": {
+        "drush/drush": "^12.0"
     }
 }
