FT2023-342: Using RouteSubscriberBase to alter route permissions.

--- a/web/modules/custom/routing_system/routing_system.services.yml
+++ b/web/modules/custom/routing_system/routing_system.services.yml
@@ -1,4 +1,5 @@
 services:
   routing_system.access_checker:
     class:  Drupal\routing_system\Access\AccessCheck
-    arguments: ['@current_user']
+    tags:
+      - { name: event_subscriber }
