--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -7,6 +7,7 @@ module:
   automated_cron: 0
   big_pipe: 0
   block: 0
+  block_api: 0
   block_content: 0
   breakpoint: 0
   ckeditor5: 0
@@ -20,6 +21,7 @@ module:
   dynamic_page_cache: 0
   editor: 0
   field: 0
+  field_api: 0
   field_ui: 0
   file: 0
   filter: 0
