FT2023-341: Fix code in dependency injection.

--- a/web/modules/custom/form_api/form_api.services.yml
+++ b/web/modules/custom/form_api/form_api.services.yml
@@ -1,4 +1,4 @@
 services:
   form_api.user_form_validator:
     class: Drupal\form_api\UserFormValidator
-    arguments: []
+    arguments: ['@email.validator']
