--- a/config/sync/form_api.settings.yml
+++ b/config/sync/form_api.settings.yml
@@ -1,4 +1,4 @@
-full_name: 'asfdasfd ddf'
+full_name: 'this name'
 phone_number: '+919876543210'
-email: me@gmail.com
+email: my@gmail.com
 gender: male
