FT2023-341: Adding config files as per PR review.

--- a/config/sync/form_api.settings.yml
+++ b/config/sync/form_api.settings.yml
@@ -1,4 +1,4 @@
-full_name: 'this name'
-phone_number: '+919876543210'
-email: my@gmail.com
+full_name: 'Souvik Banerjee'
+phone_number: '+919873214560'
+email: this@gmail.com
 gender: male
