--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -1,12 +1,9 @@
 uuid: 1f859ab5-6242-4732-a1a7-eb6aeb57f494
 langcode: en
 status: true
-dependencies:
-  module:
-    - routing_system
+dependencies: {  }
 id: editor
 label: editor
 weight: -6
 is_admin: null
-permissions:
-  - 'Routing Permission'
+permissions: {  }
