FT2023-341: Changing config file and validation changes made.

--- a/web/modules/custom/form_api/config/install/form_api.settings.yml
+++ b/web/modules/custom/form_api/config/install/form_api.settings.yml
@@ -1,7 +1,7 @@
-full_name: 'Souvik Banerjee'
-phone_number: '+919873214560'
-email: this@gmail.com
-gender: male
+full_name:
+phone_number:
+email:
+gender:
 email_providers:
   - "gmail"
   - "yahoo"
