--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -23,6 +23,7 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  form_api: 0
   hello_user: 0
   help: 0
   history: 0
@@ -30,6 +31,7 @@ module:
   link: 0
   menu_link_content: 0
   menu_ui: 0
+  movie_entity: 0
   mysql: 0
   node: 0
   options: 0
