--- a/config/sync/form_api.settings.yml
+++ b/config/sync/form_api.settings.yml
@@ -1,4 +1,14 @@
-full_name: this
-phone_number: '+919876543210'
-email: qwf@gmail.com
-gender: male
+_core:
+  default_config_hash: SXGYZ_LV4H1hFNagQo2cDNSIUmZgfPCglO1s5YJC5m8
+full_name: null
+phone_number: null
+email: null
+gender: null
+email_providers:
+  - gmail
+  - yahoo
+  - outlook
+  - hotmail
+  - mail
+  - zoho
+  - innoraft
