--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -1,9 +1,30 @@
 uuid: 1f859ab5-6242-4732-a1a7-eb6aeb57f494
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  config:
+    - node.type.article
+    - node.type.movie
+    - node.type.page
+  module:
+    - movie_entity
+    - node
+    - system
 id: editor
 label: editor
 weight: -6
 is_admin: null
-permissions: {  }
+permissions:
+  - 'access content'
+  - 'access content overview'
+  - 'administer movie_entity'
+  - 'create article content'
+  - 'create movie content'
+  - 'create page content'
+  - 'delete own article content'
+  - 'delete own movie content'
+  - 'delete own page content'
+  - 'edit own article content'
+  - 'edit own movie content'
+  - 'edit own page content'
+  - 'view own unpublished content'
