--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -15,9 +15,9 @@ module:
   contact: 0
   contextual: 0
   custom_hooks: 0
+  database_api: 0
   datetime: 0
   dblog: 0
-  devel: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
