--- a/web/modules/custom/menu_api/menu_api.services.yml
+++ b/web/modules/custom/menu_api/menu_api.services.yml
@@ -1,6 +1,6 @@
 services:
   menu_api.budget_event_subscriber:
     class: Drupal\menu_api\EventSubscriber\BudgetEventSubscriber
-    arguments: ['@config.factory', '@current_route_match']
+    arguments: ['@config.factory', '@current_route_match', '@cache_tags.invalidator', '@cache.menu']
     tags:
       - { name: 'event_subscriber' }
